# app/Http/Controllers/MrdebtController.php
@@ -36,6 +36,27 @@ class MrdebtController extends Controller
      *       type="string"
      *     ),
      * ),
+     *  @OA\Parameter(
+     *     name="usertype",
+     *     in="query",
+     *     @OA\Schema(
+     *       type="string"
+     *     ),
+     * ),
+     *  @OA\Parameter(
+     *     name="company_name",
+     *     in="query",
+     *     @OA\Schema(
+     *       type="string"
+     *     ),
+     * ),
+     *  @OA\Parameter(
+     *     name="searchbox",
+     *     in="query",
+     *     @OA\Schema(
+     *       type="string"
+     *     ),
+     * ),
      *    @OA\Parameter(
      *     name="order_by",
      *     in="query",
