# app/Http/Controllers/ProductController.php
@@ -39,6 +39,13 @@ class ProductController extends Controller
      *       type="string"
      *     ),
      * ),
+     * @OA\Parameter(
+     *     name="searchbox",
+     *     in="query",
+     *     @OA\Schema(
+     *       type="string"
+     *     ),
+     * ),
      *  @OA\Parameter(
      *     name="order_by",
      *     in="query",
